assets/css/style.css
/* Importing google fonts*/
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser*/
* {
    padding: 0;
    margin: 0;
    /* Border-box: applies the set heigh and width to the entire element including the element border*/
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    /* For elements to show underneath each other*/
    flex-direction: column;
    /* Generic project styles */
    color: white;
    font-family: 'Roboto', sans-serif;
}

/* Header */
header {
    background: url('../images/new-header-padel-court\ .webp') no-repeat 100% center / cover;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    height: 120px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    /* Add shadow underneath the header */
    box-shadow: 0 3px 5px white;
}

/* Remove the underlying styling and blue color of links in the header */
header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Exo 2', sans-serif;
    font-size: 135%;
    font-style: italic;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: rgb(250, 250, 243);
    background-color: rgba(1, 1, 21, .2);
}

/* Navigation menu */
#menu {
    list-style-type: none;
}

/* Add more space between the lines in the navigation menu*/
#menu>li {
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}

/*Give a visual cue to the active page*/
.active-page {
    border-bottom: 2px solid white;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: rgba(1, 1, 21, .2);
    width: 100%;
    left: 0;
    padding-left: 1rem;
    /* Navbar is hidden untill it's clicked to open*/
    display: none;
    /* Top of nav menu should start at bottom of the parent(header element)*/
    top: 25%;
}

/* Nav-toggle function*/
#nav-toggle:checked~nav {
    display: block;
}

/*Hides the checkbox in the nav*/
#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: white;
    color: black;
    /* For main element to take all surplus space and push the footer element down*/
    flex: 1 0 auto;
    /* Push the main down from underneath the nav with fixed position*/
    margin-top: 120px;
    /* Enable flex properties for child elements*/
    display: flex;
    flex-direction: column;
}

/* Adding section one to the main on the first page */
#section-one {
    text-align: center;
}

#section-one div,
#section-two div,
#section-three div {
    padding: 2rem 2rem;
}

#main-div>div {
    padding: 0;
    margin: 0;
}

#section-one p {
    padding: 1rem 1rem 1rem 1rem;
}

/* Adding section two to main on the first page */
.background-color {
    background-color: aliceblue;
}

#section-two h2,
#section-three h2 {
    text-align: center;
    padding: 0 1.5rem 1rem 1.5rem;
}

#section-two p {
    padding: 0 1rem 1rem 1rem;
}

#section-two a {
    color: rgb(44, 36, 155);
} 

.center-form {
    text-align: center;
}

#section-two input {
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-size: 18px;
    border: 2px solid rgb(18, 128, 223);
    border-radius: 3px;
    padding: 0.5rem;
    background-color: white;
    box-shadow: 0 0 3px rgb(18, 128, 223);
}

#section-three i {
    color: rgb(18, 128, 223);
}

#section-three li {
    list-style-type: none;
    margin-bottom: 0.5rem;
}

#vamos {
    margin-top: 1rem;
    text-align: center;
    font-weight: bold;
    font-size: 18px;
}

/*Styling the second page, find-match.html*/
#find-match {
    padding: 36px 10%;
    background-color: white;
}

#find-match-form {
    background-color: aliceblue;
    padding: 30px;
    /* Using flexbox in order to be able to center the vamos-button in the form */
    display: flex;
    flex-direction: column;
    font-family: Arial, sans-serif;

}

#find-match>h2 {
    margin-bottom: 20px;
    text-align: center;
}

#find-match>p {
    font-size: large;
    margin-bottom: 20px;
    text-align: center;
}

#find-match-form input,
#find-match-form select {
    width: 90%;
    height: 25px;
    margin: 8px 5% 8px 5%;
    border: 1px solid rgb(18, 128, 223);
    border-radius: 2px;
    padding: 0 8px;
}

#find-match-form label {
    margin-left: 5%;
}

#find-match-form fieldset {
    padding-top: 16px;
    padding-bottom: 8px;
    margin-bottom: 16px;
    border: hidden;
}

#find-match-form legend {
    font-weight: bold;
}

.submit {
    /*centering the Vamos-button using flexbox*/
    align-self: center;
    border: 1px solid rgb(18, 128, 223);
    border-radius: 2px;
    padding: 0.5rem 1rem;
    font-size: 100%;
    /*font-weight: bold;*/
    box-shadow: 0 0 3px rgb(18, 128, 223);
    background-color: white;
    color: black;
}

/* Gallery page */
#gallery>h2 {
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1.5rem;
}
/* Solving the overflow issue on mobile screen by setting the img width to 100% */
#images img {
    width: 100%;
    /* Keep the alt-text readable after removing the white lines between the photos*/
    line-height: 1em;
}

/* Remove the extra white lines between photos */
#images {
    line-height: 0;
}

/* Footer */
footer {
    background-color: rgb(18, 128, 223);
    /* Add shadow above the footer */
    box-shadow: 0 -3px 5px white;
}

#contact-ways {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#contact-ways i {
    font-size: 150%;
    padding: 5%;
    color: white;
}

/* Media query: large or landscape phones (576px and up)*/
@media screen and (min-width: 576px) {

    /* Adding border to fieldset and aligning the legends to center for screens larger than landscape mobile*/
    #find-match-form fieldset {
        border: 1px dashed rgb(18, 128, 223);
    }

    #find-match-form legend {
        text-align: center;
    }

    /*Masonry design for gallery photos*/
    #images {
        column-count: 2;
        /* Remove the white gap between the columns. */
        column-gap: 0;
    }
}

/* Media query: tablets and larger (768px and up)*/
@media screen and (min-width: 768px) {

    /* Header */
    header {
        height: 150px;
    }

    nav {
        display: block;
        width: 100%;
        padding-right: 0.5rem;
        top: 150px;
        left: 0;
        background-color: rgb(44, 36, 155);
        /* Add shadow underneath the navbar */
        box-shadow: 0 3px 5px white;
    }

    /* Make the nav menu items show side by side */
    #menu {
        display: flex;
        /* Show the nav links at the right side of the nav bar*/
        justify-content: flex-end;
        height: 36px;
    }

    /* Add space between the menu items horisontaly */
    #menu>li {
        padding-right: 1.5rem;
        font-size: 130%;
        /* Centering the nav links in the nav bar vertically */
        margin-bottom: 4.3px;
        margin-top: 4.3px;
    }

    /* Hide the checkbox label from the nav */
    .nav-toggle-label {
        display: none;
    }

    /*Increase the logo size*/
    #logo {
        font-size: 300%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /* Main */
    main {
        /*Push the main content down after enlarging the logo*/
        margin-top: 186px;
    }

    /* Increase h2 font-size */
    #section-one h2,
    #section-three h2 {
        font-size: 2.5em;
        padding: 1rem 2.5rem 2rem 2.5rem;
    }

    #section-two h2 {
        font-size: 2.5em;
        padding: 2.5rem 2.5rem 2rem 2.5rem;
    }

    p,
    #section-three li,
    #vamos {
        font-size: 1.5em;
    }

    #section-three li {
        margin-bottom: 1rem;
    }

    #vamos {
        margin-top: 2rem;
        margin-bottom: 1.5rem;
    }

    .inline-block {
        display: inline-block;
        width: 32%;
        vertical-align: top;
    }

    .inline-block p {
        padding: 0;
        margin: 0;
    }

    #section-two div {
        padding: 0;
        margin: 0;
    }

    #section-two input {
        padding: 1rem;
        font-size: 1.5em;
        margin-top: 2rem;
        margin-bottom: 3rem;
    }

    #section-three {
        text-align: center;
    }

    /*Gallery masonry design for images*/
    #images {
        column-count: 3;
    }

}

/* Media query: tablets and larger (992px and up)*/
@media screen and (min-width: 992px) {

    /* Add hover effect to the nav links*/
    #menu a:hover {
        color: rgb(230, 191, 49);
        border-bottom: 2px solid rgb(230, 191, 49);
    }

    /* Add hover effect to the logo*/
    #logo:hover {
        color: rgb(230, 191, 49);
    }

    #contact-ways i:hover {
        color: rgb(230, 191, 49);
    }

    #section-two input:hover {
        background-color: rgb(18, 128, 223);
        color: white;
    }

    .submit:hover {
        background-color: rgb(18, 128, 223);
        color: white;
    }

    /*Gallery masonry design for images*/
    #images {
        column-count: 4;
    }

    /* Make images on the gallery larger by hovering on them*/
    #images img:hover {
        transform: scale(1.2);
    }

}

